--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:3.10.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
+    // Utillity libraries
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
